--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
      <div id="kadoIn">
        <!-- Tombol Surat --><img src="https://feeldreams.github.io/kadoin.png"/>
      </div>
-     <p id="ket">Mở quà đii bé iuu :3</p>
+     <p id="ket">Mở quà đi bé iuu :3</p>
 
      <div class="kumpulanstiker">
          <!-- Stiker untuk Konten -->
@@ -68,8 +68,8 @@
 
        <p id="pesan2">Tuỵt zờiiiii! 💘</p>
        <p id="pesan3">Anh muốn nóiii với em là là là.....</p>
-       <p id="pesan4" class="sty2">Anh iuu emmm nhìu lắmmm lắm nhunnn</p>
-       <p id="pesan5" class="sty2">hong biết aiii đó có nhớ anhhh khonnggg hàaaaa</p>
+       <p id="pesan4" class="sty2">Anh nhớ emmm nhìu lắmmm lắm nhunnn:))</p>
+       <p id="pesan5" class="sty2">hong biết aiii đó có nhớ anhhh khonnggg hàaaaa:v</p>
        <p id="pesan6" class="sty2">Còn anhh trong đầuuu bây giờ chỉ có hình póngg dáng em thoaii🤧</p>
 
        <!-- Tombol Lanjut -->
